# ma-sh

./: .gitignore  CMakeLists.txt  README.md  aabb_selector.py  auto_run.sh  auto_test.sh  cal_metrics.py  ccompile.sh  clear_tag.py  cluster_anchors.py  compare.py  compare_noise.py  compile.bat  compile.sh  convert.py  convert.sh  convert_capture_image.py  convert_encode_image.py  convert_encode_image.sh  convert_encode_mash.py  convert_encode_points.py  convert_encode_points.sh  convert_encode_text.py  convert_famous.py  convert_glb_to_mash.py  convert_images_to_video.py  convert_manifold.py  convert_mash.py  convert_mash.sh  convert_mash_pcd.py  convert_mash_to_mesh.py  convert_mash_to_pcd.py  convert_mesh.py  convert_mesh_to_mash.py  convert_noise_mash.py  convert_noise_mash_pcd.py  convert_normalize_mesh.py  convert_normalize_mesh.sh  convert_npz.py  convert_npz_to_mash.py  (+74 more)
ma_sh/Config/: color.py  constant.py  custom_path.py  degree.py  kernel.py  mean_std.py  mode.py  shapenet.py  transformer.py  weights.py
ma_sh/Cpp/: CMakeLists.txt  idx.h  main.cpp
ma_sh/Cpp/include/: add.h  bound.h  chamfer.h  constant.h  cuda_utils.h  direction.h  filter.h  fps.h  idx.h  inv.h  loss.h  mash.h  mash_unit.h  mask.h  rotate.h  sample.h  sh.h  simple_mash.h  single_ops.h  timer.h  utils.h  value.h  weights.h
ma_sh/Cpp/src/: add.cpp  bindings.cpp  bound.cpp  chamfer.cpp  chamfer_gpu.cu  core.cpp  direction.cpp  filter.cpp  fps.cpp  fps_gpu.cu  idx.cpp  inv.cpp  loss.cpp  mash.cpp  mash_unit.cpp  mask.cpp  rotate.cpp  sample.cpp  sh.cpp  simple_mash.cpp  single_ops.cpp  timer.cpp  value.cpp
ma_sh/Data/: abb.py  mesh.py  metric.py  pcd.py  point.py  simple_mash.py
ma_sh/Demo/: aabb_selector.py  adaptive_trainer.py  convertor.py  crop_pcd.py  dataset_logger.py  glb_to_mash.py  local_editor.py  mash.py  mash_to_pcd.py  mesh_to_mash.py  mesh_trainer.py  npz_to_mash.py  pcd_convertor.py  pcd_trainer.py  pipeline_convertor.py  refine_manager.py  refiner.py  renderer.py  single_anchor_trainer.py  trainer.py  view.py
ma_sh/Demo/Convertor/: capture_image.py  encode_image.py  encode_mash.py  encode_points.py  encode_text.py  images_to_video.py  mash.py  mash_pcd.py  mash_to_mesh.py  (+14 more)
ma_sh/Loss/: boundary.py  chamfer_distance.py
ma_sh/Method/: animation.py  center.py  check.py  clip.py  color.py  crop.py  data.py  dataset.py  feature.py  filter.py  format.py  idx.py  image.py  io.py  kernel.py  kernel_unit.py  mash.py  mash_distribution.py  mash_unit.py  mask.py  mean_std.py  mesh.py  metric.py  noise.py  normal.py  outer.py  paint.py  path.py  pcd.py  random_mash.py  render.py  rotate.py  sample.py  sh.py  sort.py  sphere_colormap.py  torch_thread.py  transformer.py  trimesh.py  video.py
ma_sh/Metric/: chamfer.py  compare.py  compare_noise.py  fscore.py  nic.py
ma_sh/Model/: base_mash.py  mash.py  simple_mash.py
ma_sh/Module/: aabb_selector.py  adaptive_trainer.py  anchor_marker.py  base_trainer.py  convertor.py  dataset_logger.py  early_stopping.py  local_editor.py  logger.py  mesh_trainer.py  metric_manager.py  o3d_viewer.py  pcd_convertor.py  pcd_trainer.py  refine_manager.py  refiner.py  renderer.py  single_anchor_trainer.py  timer.py  trainer.py
ma_sh/Test/: cpp.py  cpp_with_cuda.py  data_check.py  grad.py  import_o3d.py  init_values.py  mash.py  mash_kernel.py  mash_model.py  mash_unit.py  metric.py  noise.py  ones_like.py  param_coverage.py  pickle_version.py  random_mash.py  rotate.py  sh_points.py  simple_mash_model.py  simple_mash_render.py  speed.py  torch_multi.py
(+53 files in other folders)
